some changes to patels code

--- a/complete/house_prices/13_.ipynb
+++ b/complete/house_prices/13_.ipynb
@@ -104,25 +104,29 @@
    },
    "outputs": [],
    "source": [
-    "# Fill empty values with None\n",
-    "for col in ('MiscFeature', 'PoolQC', 'Alley', 'Fence', 'FireplaceQu', 'GarageType', 'GarageFinish', \n",
-    "            'GarageQual', 'GarageCond', 'BsmtQual', 'BsmtCond', 'BsmtExposure', 'BsmtFinType1', 'BsmtFinType2',\n",
-    "           'MasVnrType', 'MSSubClass'):\n",
-    "    full[col] = full[col].fillna(\"None\")\n",
     "\n",
-    "# Fill empty values with 0\n",
-    "for col in ('BsmtFinSF1', 'BsmtFinSF2', 'BsmtUnfSF','TotalBsmtSF', 'BsmtFullBath', 'BsmtHalfBath',\n",
-    "           'GarageYrBlt', 'GarageArea', 'GarageCars', 'MasVnrArea'):\n",
-    "    full[col] = full[col].fillna(0)\n",
-    "    \n",
-    "#Group by neighborhood and fill in missing value by the median LotFrontage of all the neighborhood\n",
-    "full[\"LotFrontage\"] = full.groupby(\"Neighborhood\")[\"LotFrontage\"].transform(\n",
-    "    lambda x: x.fillna(x.median()))\n",
-    "\n",
-    "for col in ('MSZoning', 'Electrical', 'KitchenQual', 'Exterior1st', 'Exterior2nd', 'SaleType'):\n",
+    "#### MODE\n",
+    "# Fill these features with their mode, the most commonly occuring value. This is okay since there are a low number of missing values for these features\n",
+    "for col in (\"MSZoning\", \"Electrical\", \"KitchenQual\", \n",
+    "            \"Exterior1st\", \"Exterior2nd\", \"SaleType\", \"Functional\")\n",
     "    full[col] = full[col].fillna(full[col].mode()[0])\n",
     "    \n",
-    "full[\"Functional\"] = full[\"Functional\"].fillna(\"Typ\")"
+    "#### ZERO\n",
+    "# Using data description, fill these missing values with 0 \n",
+    "for col in (\"GarageYrBlt\", \"GarageArea\", \"GarageCars\", \"BsmtFinSF1\", \n",
+    "           \"BsmtFinSF2\", \"BsmtUnfSF\", \"TotalBsmtSF\", \"MasVnrArea\",\n",
+    "           \"BsmtFullBath\", \"BsmtHalfBath\"):\n",
+    "    full[col] = full[col].fillna(0)\n",
+    "    \n",
+    "#### NONE\n",
+    "for col in (\"PoolQC\", \"MiscFeature\", \"Alley\", \"Fence\", \"FireplaceQu\",\n",
+    "           \"GarageType\", \"GarageFinish\", \"GarageQual\", \"GarageCond\",\n",
+    "           \"BsmtQual\", \"BsmtCond\", \"BsmtExposure\", \"BsmtFinType1\",\n",
+    "            \"BsmtFinType2\", \"MSSubClass\", \"MasVnrType\"):\n",
+    "    full[col] = full[col].fillna(\"None\")\n",
+    "    \n",
+    "full[\"LotFrontage\"] = full.groupby(\"Neighborhood\")[\"LotFrontage\"].transform(\n",
+    "    lambda x: x.fillna(x.median()))"
    ]
   },
   {
@@ -161,6 +165,84 @@
     "for col in ('MSSubClass', 'OverallCond', 'YrSold', 'MoSold'):\n",
     "    full[col] = full[col].apply(str)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Polynomials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Quadratic\n",
+    "full[\"OverallQual-2\"] = full[\"OverallQual\"] ** 2\n",
+    "full[\"GrLivArea-2\"] = full[\"GrLivArea\"] ** 2\n",
+    "full[\"GarageCars-2\"] = full[\"GarageCars\"] ** 2\n",
+    "full[\"GarageArea-2\"] = full[\"GarageArea\"] ** 2\n",
+    "full[\"TotalBsmtSF-2\"] = full[\"TotalBsmtSF\"] ** 2\n",
+    "full[\"1stFlrSF-2\"] = full[\"1stFlrSF\"] ** 2\n",
+    "full[\"FullBath-2\"] = full[\"FullBath\"] ** 2\n",
+    "full[\"TotRmsAbvGrd-2\"] = full[\"TotRmsAbvGrd\"] ** 2\n",
+    "full[\"Fireplaces-2\"] = full[\"Fireplaces\"] ** 2\n",
+    "full[\"MasVnrArea-2\"] = full[\"MasVnrArea\"] ** 2\n",
+    "full[\"BsmtFinSF1-2\"] = full[\"BsmtFinSF1\"] ** 2\n",
+    "full[\"LotFrontage-2\"] = full[\"LotFrontage\"] ** 2\n",
+    "full[\"WoodDeckSF-2\"] = full[\"WoodDeckSF\"] ** 2\n",
+    "full[\"OpenPorchSF-2\"] = full[\"OpenPorchSF\"] ** 2\n",
+    "full[\"2ndFlrSF-2\"] = full[\"2ndFlrSF\"] ** 2\n",
+    "print(\"Quadratics done!...\")\n",
+    "\n",
+    "# Cubic\n",
+    "full[\"OverallQual-3\"] = full[\"OverallQual\"] ** 3\n",
+    "full[\"GrLivArea-3\"] = full[\"GrLivArea\"] ** 3\n",
+    "full[\"GarageCars-3\"] = full[\"GarageCars\"] ** 3\n",
+    "full[\"GarageArea-3\"] = full[\"GarageArea\"] ** 3\n",
+    "full[\"TotalBsmtSF-3\"] = full[\"TotalBsmtSF\"] ** 3\n",
+    "full[\"1stFlrSF-3\"] = full[\"1stFlrSF\"] ** 3\n",
+    "full[\"FullBath-3\"] = full[\"FullBath\"] ** 3\n",
+    "full[\"TotRmsAbvGrd-3\"] = full[\"TotRmsAbvGrd\"] ** 3\n",
+    "full[\"Fireplaces-3\"] = full[\"Fireplaces\"] ** 3\n",
+    "full[\"MasVnrArea-3\"] = full[\"MasVnrArea\"] ** 3\n",
+    "full[\"BsmtFinSF1-3\"] = full[\"BsmtFinSF1\"] ** 3\n",
+    "full[\"LotFrontage-3\"] = full[\"LotFrontage\"] ** 3\n",
+    "full[\"WoodDeckSF-3\"] = full[\"WoodDeckSF\"] ** 3\n",
+    "full[\"OpenPorchSF-3\"] = full[\"OpenPorchSF\"] ** 3\n",
+    "full[\"2ndFlrSF-3\"] = full[\"2ndFlrSF\"] ** 3\n",
+    "print(\"Cubics done!...\")\n",
+    "\n",
+    "# Square Root\n",
+    "full[\"OverallQual-Sq\"] = np.sqrt(full[\"OverallQual\"])\n",
+    "full[\"GrLivArea-Sq\"] = np.sqrt(full[\"GrLivArea\"])\n",
+    "full[\"GarageCars-Sq\"] = np.sqrt(full[\"GarageCars\"])\n",
+    "full[\"GarageArea-Sq\"] = np.sqrt(full[\"GarageArea\"])\n",
+    "full[\"TotalBsmtSF-Sq\"] = np.sqrt(full[\"TotalBsmtSF\"])\n",
+    "full[\"1stFlrSF-Sq\"] = np.sqrt(full[\"1stFlrSF\"])\n",
+    "full[\"FullBath-Sq\"] = np.sqrt(full[\"FullBath\"])\n",
+    "full[\"TotRmsAbvGrd-Sq\"] = np.sqrt(full[\"TotRmsAbvGrd\"])\n",
+    "full[\"Fireplaces-Sq\"] = np.sqrt(full[\"Fireplaces\"])\n",
+    "full[\"MasVnrArea-Sq\"] = np.sqrt(full[\"MasVnrArea\"])\n",
+    "full[\"BsmtFinSF1-Sq\"] = np.sqrt(full[\"BsmtFinSF1\"])\n",
+    "full[\"LotFrontage-Sq\"] = np.sqrt(full[\"LotFrontage\"])\n",
+    "full[\"WoodDeckSF-Sq\"] = np.sqrt(full[\"WoodDeckSF\"])\n",
+    "full[\"OpenPorchSF-Sq\"] = np.sqrt(full[\"OpenPorchSF\"])\n",
+    "full[\"2ndFlrSF-Sq\"] = np.sqrt(full[\"2ndFlrSF\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -206,7 +288,9 @@
    },
    "outputs": [],
    "source": [
-    "full['TotalSF'] = full['TotalBsmtSF'] + full['1stFlrSF'] + full['2ndFlrSF']"
+    "full['TotalSF'] = full['TotalBsmtSF'] + full['1stFlrSF'] + full['2ndFlrSF']\n",
+    "\n",
+    "all_data['BsmtQual'] = all_data['BsmtQual'].map({\"None\":0, \"Fa\":1, \"TA\":2, \"Gd\":3, \"Ex\":4})"
    ]
   },
   {
