house sub matches best score

--- a/complete/house_prices/sub.ipynb
+++ b/complete/house_prices/sub.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Score:\n",
+    "# Score: 0.11558\n",
     "\n",
     "- Most of this inspiration comes from Kaggle user [Serigine](https://www.kaggle.com/serigne) and his excellent [tutorial](https://www.kaggle.com/serigne/stacked-regressions-top-4-on-leaderboard)\n",
     "\n",
@@ -36,15 +36,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data"
+    "### Data: Loading, preprocessing, and merging"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train = pd.read_csv('../../data/house_prices/train.csv')\n",
@@ -54,28 +52,12 @@
     "test_id = test['Id']\n",
     "\n",
     "train.drop(\"Id\", axis = 1, inplace = True)\n",
-    "test.drop(\"Id\", axis = 1, inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Initial preprocessing and merging data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# remove outliers (see analysis notebook)\n",
+    "test.drop(\"Id\", axis = 1, inplace = True)\n",
+    "\n",
+    "# Remove outliers\n",
     "train = train.drop(train[(train['GrLivArea']>4000) & (train['SalePrice']<300000)].index)\n",
     "\n",
-    "# applies log(1+x) to all elements of the column\n",
+    "# We use the numpy fuction log1p which  applies log(1+x) to all elements of the column\n",
     "train[\"SalePrice\"] = np.log1p(train[\"SalePrice\"])\n",
     "\n",
     "train_N = train.shape[0]\n",
@@ -94,10 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Fill empty values with None\n",
@@ -109,23 +89,32 @@
     "# Fill empty values with 0\n",
     "for col in ('BsmtFinSF1', 'BsmtFinSF2', 'BsmtUnfSF','TotalBsmtSF', 'BsmtFullBath', 'BsmtHalfBath',\n",
     "           'GarageYrBlt', 'GarageArea', 'GarageCars', 'MasVnrArea'):\n",
-    "    full[col] = full[col].fillna(0)\n",
-    "    \n",
-    "#Group by neighborhood and fill in missing value by the median LotFrontage of all the neighborhood\n",
-    "full[\"LotFrontage\"] = full.groupby(\"Neighborhood\")[\"LotFrontage\"].transform(\n",
-    "    lambda x: x.fillna(x.median()))\n",
-    "\n",
-    "for col in ('MSZoning', 'Electrical', 'KitchenQual', 'Exterior1st', 'Exterior2nd', 'SaleType'):\n",
-    "    full[col] = full[col].fillna(full[col].mode()[0])\n",
-    "    \n",
-    "full[\"Functional\"] = full[\"Functional\"].fillna(\"Typ\")"
+    "    full[col] = full[col].fillna(0)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "### Drop columns"
+    "#Group by neighborhood and fill in missing value by the median LotFrontage of all the neighborhood\n",
+    "full[\"LotFrontage\"] = full.groupby(\"Neighborhood\")[\"LotFrontage\"].transform(\n",
+    "    lambda x: x.fillna(x.median()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for col in ('MSZoning', 'Electrical', 'KitchenQual', 'Exterior1st', 'Exterior2nd', 'SaleType'):\n",
+    "    full[col] = full[col].fillna(full[col].mode()[0])"
    ]
   },
   {
@@ -136,14 +125,8 @@
    },
    "outputs": [],
    "source": [
+    "# Drop utilities\n",
     "full = full.drop(['Utilities'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Transforming numerical columns into categorical columns"
    ]
   },
   {
@@ -154,15 +137,7 @@
    },
    "outputs": [],
    "source": [
-    "for col in ('MSSubClass', 'OverallCond', 'YrSold', 'MoSold'):\n",
-    "    full[col] = full[col].apply(str)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Label encodes all the categorical columns"
+    "full[\"Functional\"] = full[\"Functional\"].fillna(\"Typ\")"
    ]
   },
   {
@@ -173,8 +148,20 @@
    },
    "outputs": [],
    "source": [
+    "# Transforming numerical columns into categorical columns\n",
+    "for col in ('MSSubClass', 'OverallCond', 'YrSold', 'MoSold'):\n",
+    "    full[col] = full[col].apply(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
     "categorical_cols = ('FireplaceQu', 'BsmtQual', 'BsmtCond', 'GarageQual', 'GarageCond', \n",
     "        'ExterQual', 'ExterCond','HeatingQC', 'PoolQC', 'KitchenQual', 'BsmtFinType1', \n",
     "        'BsmtFinType2', 'Functional', 'Fence', 'BsmtExposure', 'GarageFinish', 'LandSlope',\n",
@@ -188,15 +175,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create new column Total Square Feet"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -209,22 +189,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Removing skew\n",
-    "\n",
-    "All of this skew analysis is thanks to Serginne"
+    "### Again all credit goes to Serigine, I'm literally copying all of his code in this section"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.special import boxcox1p\n",
     "from scipy import stats\n",
     "from scipy.stats import norm, skew\n",
+    "from scipy.special import boxcox1p\n",
     "\n",
     "numeric_feats = full.dtypes[full.dtypes != \"object\"].index\n",
     "\n",
@@ -232,38 +208,12 @@
     "skewed_feats = full[numeric_feats].apply(lambda x: skew(x.dropna())).sort_values(ascending=False)\n",
     "\n",
     "skewness = pd.DataFrame({'Skew' :skewed_feats})\n",
-    "skewness = skewness[abs(skewness) > 0.75]\n",
     "\n",
-    "skewed_features = skewness.index\n",
+    "skewed_features = skewness[abs(skewness) > 0.75].index\n",
     "lam = 0.15\n",
     "\n",
     "for feat in skewed_features:\n",
     "    full[feat] = boxcox1p(full[feat], lam)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Turn categorical columns into dummy variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "full = pd.get_dummies(full)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Split the merged data back into train and test data"
    ]
   },
   {
@@ -274,15 +224,9 @@
    },
    "outputs": [],
    "source": [
+    "full = pd.get_dummies(full)\n",
     "train = full[:train_N]\n",
     "test = full[train_N:]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Machine Learning imports"
    ]
   },
   {
@@ -306,13 +250,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Validation scores"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
@@ -320,22 +257,15 @@
    },
    "outputs": [],
    "source": [
-    "kf = KFold(5, shuffle=True, random_state=42).get_n_splits(train.values)\n",
+    "n_folds = 5\n",
     "\n",
-    "def cvs(model):\n",
-    "    return cross_val_score(model, train.values, train_y, scoring=\"neg_mean_squared_error\", cv=kf)\n",
+    "def rmsle_cv(model):\n",
+    "    kf = KFold(n_folds, shuffle=True, random_state=42).get_n_splits(train.values)\n",
+    "    rmse= np.sqrt(-cross_val_score(model, train.values, train_y, scoring=\"neg_mean_squared_error\", cv = kf))\n",
+    "    return(rmse)\n",
     "\n",
-    "def rms(y, y_pred):\n",
+    "def rmsle(y, y_pred):\n",
     "    return np.sqrt(mean_squared_error(y, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Creating different models\n",
-    "\n",
-    "The parameters for each of the models were suggested by Serginne for being very robust"
    ]
   },
   {
@@ -370,13 +300,6 @@
     "                              bagging_freq = 5, feature_fraction = 0.2319,\n",
     "                              feature_fraction_seed=9, bagging_seed=9,\n",
     "                              min_data_in_leaf =6, min_sum_hessian_in_leaf = 11)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Class to help stack different models"
    ]
   },
   {
@@ -424,26 +347,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Stacking different models"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'csv' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-2cceab1176b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m                                                  meta_model = lasso)\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mscore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstacked_averaged_models\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Stacking Averaged models score: {:.4f} ({:.4f})\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'csv' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stacking Averaged models score: 0.1085 (0.0074)\n"
      ]
     }
    ],
@@ -451,161 +363,95 @@
     "stacked_averaged_models = StackingAveragedModels(base_models = (ENet, GBoost, KRR),\n",
     "                                                 meta_model = lasso)\n",
     "\n",
-    "score = csv(stacked_averaged_models)\n",
+    "score = rmsle_cv(stacked_averaged_models)\n",
     "print(\"Stacking Averaged models score: {:.4f} ({:.4f})\".format(score.mean(), score.std()))"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "### Stacked Prediction"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'stacked_averaged_models' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-c67daf88cbd1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Fitting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mstacked_averaged_models\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Predicting train values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mstacked_train_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstacked_averaged_models\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'stacked_averaged_models' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Fitting\n",
-    "stacked_averaged_models.fit(train.values, y_train)\n",
-    "\n",
-    "# Predicting train values\n",
-    "stacked_train_pred = stacked_averaged_models.predict(train.values)\n",
-    "\n",
-    "# Predicting test values\n",
-    "stacked_pred = stacked_averaged_models.predict(test.values)\n",
-    "stacked_pred = np.expm1(stacked_pred) # exp(x) + 1 (reverses log1p from earlier)\n",
-    "\n",
-    "print(rms(train_y, stacked_train_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### XG Boost Prediction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'model_xgb' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-0514f4298d6a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Fitting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel_xgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Predicting train values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mxgb_train_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_xgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'model_xgb' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Fitting\n",
-    "model_xgb.fit(train, y_train)\n",
-    "\n",
-    "# Predicting train values\n",
-    "xgb_train_pred = model_xgb.predict(train)\n",
-    "\n",
-    "# Predicting test values\n",
-    "xgb_pred = model_xgb.predict(test)\n",
-    "xgb_pred = np.expm1(xgb_pred) # exp(x) + 1 (reverses log1p from earlier)\n",
-    "\n",
-    "print(rms(y_train, xgb_train_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Light Gradient Boost Prediction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.07307464036005418\n"
+      "0.0781571937916\n"
      ]
     }
    ],
    "source": [
-    "# Fitting\n",
-    "model_lgb.fit(train, y_train)\n",
-    "\n",
-    "# Predicting train values\n",
+    "stacked_averaged_models.fit(train.values, train_y)\n",
+    "stacked_train_pred = stacked_averaged_models.predict(train.values)\n",
+    "stacked_pred = np.expm1(stacked_averaged_models.predict(test.values))\n",
+    "print(rmsle(train_y, stacked_train_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0787202712439\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_xgb.fit(train, train_y)\n",
+    "xgb_train_pred = model_xgb.predict(train)\n",
+    "xgb_pred = np.expm1(model_xgb.predict(test))\n",
+    "print(rmsle(train_y, xgb_train_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0730746403601\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_lgb.fit(train, train_y)\n",
     "lgb_train_pred = model_lgb.predict(train)\n",
-    "\n",
-    "# Predicting test values\n",
-    "lgb_pred = model_lgb.predict(test.values)\n",
-    "lgb_pred = np.expm1(lgb_pred) # exp(x) + 1 (reverses log1p from earlier)\n",
-    "\n",
-    "print(rms(y_train, lgb_train_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Merging all the different models"
+    "lgb_pred = np.expm1(model_lgb.predict(test.values))\n",
+    "print(rmsle(train_y, lgb_train_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "ensemble = stacked_pred*0.70 + xgb_pred*0.15 + lgb_pred*0.15"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Saving predictions to CSV"
+    "predictions = stacked_pred*0.70 + xgb_pred*0.15 + lgb_pred*0.15"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "predictions = pd.DataFrame({\n",
+    "submission = pd.DataFrame({\n",
     "    'Id': test_id,\n",
-    "    'SalePrice': ensemble\n",
+    "    'SalePrice': predictions\n",
     "})\n",
     "\n",
-    "predictions.to_csv('../../submissions/house.csv', index=False)"
+    "submission.to_csv('/Users/pbezuhov/git/Kaggle/submissions/orig_(edited).csv',index=False)"
    ]
   },
   {
