best scoreing house is clean

--- a/in_progress/doge/beluga_code.ipynb
+++ b/in_progress/doge/beluga_code.ipynb
@@ -112,7 +112,7 @@
      "output_type": "stream",
      "text": [
       "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.2/resnet50_weights_tf_dim_ordering_tf_kernels.h5\n",
-      " 39993344/102853048 [==========>...................] - ETA: 5:22 ETA: "
+      "102465536/102853048 [============================>.] - ETA: 2s"
      ]
     }
    ],
