--- a/complete/house_prices/submission.ipynb
+++ b/complete/house_prices/submission.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Score:\n",
+    "# Score: 0.11558\n",
     "\n",
     "- Most of this inspiration comes from Kaggle user [Serigine](https://www.kaggle.com/serigne) and his excellent [tutorial](https://www.kaggle.com/serigne/stacked-regressions-top-4-on-leaderboard)\n",
     "\n",
@@ -36,15 +36,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data"
+    "### Data: Loading, preprocessing, and merging"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train = pd.read_csv('../../data/house_prices/train.csv')\n",
@@ -54,28 +52,12 @@
     "test_id = test['Id']\n",
     "\n",
     "train.drop(\"Id\", axis = 1, inplace = True)\n",
-    "test.drop(\"Id\", axis = 1, inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Initial preprocessing and merging data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# remove outliers (see analysis notebook)\n",
+    "test.drop(\"Id\", axis = 1, inplace = True)\n",
+    "\n",
+    "# Remove outliers\n",
     "train = train.drop(train[(train['GrLivArea']>4000) & (train['SalePrice']<300000)].index)\n",
     "\n",
-    "# applies log(1+x) to all elements of the column\n",
+    "# We use the numpy fuction log1p which  applies log(1+x) to all elements of the column\n",
     "train[\"SalePrice\"] = np.log1p(train[\"SalePrice\"])\n",
     "\n",
     "train_N = train.shape[0]\n",
@@ -94,10 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Fill empty values with None\n",
@@ -118,42 +98,12 @@
     "for col in ('MSZoning', 'Electrical', 'KitchenQual', 'Exterior1st', 'Exterior2nd', 'SaleType'):\n",
     "    full[col] = full[col].fillna(full[col].mode()[0])\n",
     "    \n",
-    "full[\"Functional\"] = full[\"Functional\"].fillna(\"Typ\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Drop columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "full = full.drop(['Utilities'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Transforming numerical columns into categorical columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "# Drop utilities\n",
+    "full = full.drop(['Utilities'], axis=1)\n",
+    "\n",
+    "full[\"Functional\"] = full[\"Functional\"].fillna(\"Typ\")\n",
+    "\n",
+    "# Transforming numerical columns into categorical columns\n",
     "for col in ('MSSubClass', 'OverallCond', 'YrSold', 'MoSold'):\n",
     "    full[col] = full[col].apply(str)"
    ]
@@ -167,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -191,12 +141,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create new column Total Square Feet"
+    "### Create new column: Total Square Feet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -216,15 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.special import boxcox1p\n",
     "from scipy import stats\n",
     "from scipy.stats import norm, skew\n",
+    "from scipy.special import boxcox1p\n",
     "\n",
     "numeric_feats = full.dtypes[full.dtypes != \"object\"].index\n",
     "\n",
@@ -232,9 +180,8 @@
     "skewed_feats = full[numeric_feats].apply(lambda x: skew(x.dropna())).sort_values(ascending=False)\n",
     "\n",
     "skewness = pd.DataFrame({'Skew' :skewed_feats})\n",
-    "skewness = skewness[abs(skewness) > 0.75]\n",
     "\n",
-    "skewed_features = skewness.index\n",
+    "skewed_features = skewness[abs(skewness) > 0.75].index\n",
     "lam = 0.15\n",
     "\n",
     "for feat in skewed_features:\n",
@@ -250,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -320,12 +267,14 @@
    },
    "outputs": [],
    "source": [
-    "kf = KFold(5, shuffle=True, random_state=42).get_n_splits(train.values)\n",
+    "n_folds = 5\n",
     "\n",
-    "def cvs(model):\n",
-    "    return cross_val_score(model, train.values, train_y, scoring=\"neg_mean_squared_error\", cv=kf)\n",
+    "def rmsle_cv(model):\n",
+    "    kf = KFold(n_folds, shuffle=True, random_state=42).get_n_splits(train.values)\n",
+    "    rmse= np.sqrt(-cross_val_score(model, train.values, train_y, scoring=\"neg_mean_squared_error\", cv = kf))\n",
+    "    return(rmse)\n",
     "\n",
-    "def rms(y, y_pred):\n",
+    "def rmsle(y, y_pred):\n",
     "    return np.sqrt(mean_squared_error(y, y_pred))"
    ]
   },
@@ -436,14 +385,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'csv' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-2cceab1176b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m                                                  meta_model = lasso)\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mscore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstacked_averaged_models\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Stacking Averaged models score: {:.4f} ({:.4f})\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'csv' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stacking Averaged models score: 0.1085 (0.0074)\n"
      ]
     }
    ],
@@ -451,48 +396,35 @@
     "stacked_averaged_models = StackingAveragedModels(base_models = (ENet, GBoost, KRR),\n",
     "                                                 meta_model = lasso)\n",
     "\n",
-    "score = csv(stacked_averaged_models)\n",
+    "score = rmsle_cv(stacked_averaged_models)\n",
     "print(\"Stacking Averaged models score: {:.4f} ({:.4f})\".format(score.mean(), score.std()))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Stacked Prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'stacked_averaged_models' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-c67daf88cbd1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Fitting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mstacked_averaged_models\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Predicting train values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mstacked_train_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstacked_averaged_models\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'stacked_averaged_models' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0781571937916\n"
      ]
     }
    ],
    "source": [
-    "# Fitting\n",
-    "stacked_averaged_models.fit(train.values, y_train)\n",
-    "\n",
-    "# Predicting train values\n",
+    "stacked_averaged_models.fit(train.values, train_y)\n",
     "stacked_train_pred = stacked_averaged_models.predict(train.values)\n",
-    "\n",
-    "# Predicting test values\n",
-    "stacked_pred = stacked_averaged_models.predict(test.values)\n",
-    "stacked_pred = np.expm1(stacked_pred) # exp(x) + 1 (reverses log1p from earlier)\n",
-    "\n",
-    "print(rms(train_y, stacked_train_pred))"
+    "stacked_pred = np.expm1(stacked_averaged_models.predict(test.values))\n",
+    "print(rmsle(train_y, stacked_train_pred))"
    ]
   },
   {
@@ -504,33 +436,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'model_xgb' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-0514f4298d6a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Fitting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel_xgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Predicting train values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mxgb_train_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_xgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'model_xgb' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0787202712439\n"
      ]
     }
    ],
    "source": [
-    "# Fitting\n",
-    "model_xgb.fit(train, y_train)\n",
-    "\n",
-    "# Predicting train values\n",
+    "model_xgb.fit(train, train_y)\n",
     "xgb_train_pred = model_xgb.predict(train)\n",
-    "\n",
-    "# Predicting test values\n",
-    "xgb_pred = model_xgb.predict(test)\n",
-    "xgb_pred = np.expm1(xgb_pred) # exp(x) + 1 (reverses log1p from earlier)\n",
-    "\n",
-    "print(rms(y_train, xgb_train_pred))"
+    "xgb_pred = np.expm1(model_xgb.predict(test))\n",
+    "print(rmsle(train_y, xgb_train_pred))"
    ]
   },
   {
@@ -542,29 +463,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.07307464036005418\n"
+      "0.0730746403601\n"
      ]
     }
    ],
    "source": [
-    "# Fitting\n",
-    "model_lgb.fit(train, y_train)\n",
-    "\n",
-    "# Predicting train values\n",
+    "model_lgb.fit(train, train_y)\n",
     "lgb_train_pred = model_lgb.predict(train)\n",
-    "\n",
-    "# Predicting test values\n",
-    "lgb_pred = model_lgb.predict(test.values)\n",
-    "lgb_pred = np.expm1(lgb_pred) # exp(x) + 1 (reverses log1p from earlier)\n",
-    "\n",
-    "print(rms(y_train, lgb_train_pred))"
+    "lgb_pred = np.expm1(model_lgb.predict(test.values))\n",
+    "print(rmsle(train_y, lgb_train_pred))"
    ]
   },
   {
@@ -576,13 +490,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "ensemble = stacked_pred*0.70 + xgb_pred*0.15 + lgb_pred*0.15"
+    "predictions = stacked_pred*0.70 + xgb_pred*0.15 + lgb_pred*0.15"
    ]
   },
   {
@@ -594,18 +508,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "predictions = pd.DataFrame({\n",
+    "submission = pd.DataFrame({\n",
     "    'Id': test_id,\n",
-    "    'SalePrice': ensemble\n",
+    "    'SalePrice': predictions\n",
     "})\n",
     "\n",
-    "predictions.to_csv('../../submissions/house.csv', index=False)"
+    "submission.to_csv('/Users/pbezuhov/git/Kaggle/submissions/orig_(edited).csv',index=False)"
    ]
   },
   {
