upgraded mnists readme

--- a/in_progress/doge/beluga_code.ipynb
+++ b/in_progress/doge/beluga_code.ipynb
@@ -97,6 +97,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read and resize image."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -105,15 +112,7 @@
    "outputs": [],
    "source": [
     "def read_img(img_id, train_or_test, size):\n",
-    "    \"\"\"Read and resize image.\n",
-    "    # Arguments\n",
-    "        img_id: string\n",
-    "        train_or_test: string 'train' or 'test'.\n",
-    "        size: resize the original image.\n",
-    "    # Returns\n",
-    "        Image as numpy array.\n",
-    "    \"\"\"\n",
-    "    img = image.load_img(join(data_dir, train_or_test, '%s.jpg' % img_id), target_size=size)\n",
+    "    img = image.load_img(join(data_dir, train_or_test, img_id+'.jpg'), target_size=size)\n",
     "    img = image.img_to_array(img)\n",
     "    return img"
    ]
@@ -208,8 +207,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +221,10 @@
      "output_type": "stream",
      "text": [
       "((1409, 224, 224, 3), (368, 224, 224, 3), (1409, 16), (368, 16))\n",
-      " 384/1409 [=======>......................] - ETA: 17:10"
+      "1409/1409 [==============================] - 1482s 1s/step\n",
+      "368/368 [==============================] - 403s 1s/step\n",
+      "VGG train bottleneck features shape: (1409, 512) size: 721,408\n",
+      "VGG valid bottleneck features shape: (368, 512) size: 188,416\n"
      ]
     }
    ],
@@ -225,10 +232,10 @@
     "Xtr = x_train[train_idx]\n",
     "Xv = x_train[valid_idx]\n",
     "\n",
-    "print((Xtr.shape, Xv.shape, ytr.shape, yv.shape))\n",
-    "\n",
     "vgg_bottleneck = VGG16(weights='imagenet', include_top=False, pooling=POOLING)\n",
-    "vgg_bottleneck.compile('sgd','mse') # some kind of bug in the latest keras.  Recommended to have this line of code\n",
+    "\n",
+    "# some kind of bug in the latest keras.  Recommended to have this line of code\n",
+    "vgg_bottleneck.compile('sgd','mse')\n",
     "\n",
     "train_vgg_bf = vgg_bottleneck.predict(Xtr, batch_size=32, verbose=1)\n",
     "valid_vgg_bf = vgg_bottleneck.predict(Xv, batch_size=32, verbose=1)\n",
@@ -246,14 +253,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation VGG LogLoss 0.35206022686940147\n",
+      "Validation VGG Accuracy 0.9184782608695652\n"
+     ]
+    }
+   ],
    "source": [
     "logreg = LogisticRegression(multi_class='multinomial', solver='lbfgs', random_state=SEED)\n",
     "logreg.fit(train_vgg_bf, (ytr * range(NUM_CLASSES)).sum(axis=1))\n",
+    "\n",
     "valid_probs = logreg.predict_proba(valid_vgg_bf)\n",
     "valid_preds = logreg.predict(valid_vgg_bf)\n",
     "\n",
@@ -270,11 +285,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1214it [00:09, 122.28it/s]/anaconda3/lib/python3.6/site-packages/tqdm/_monitor.py:89: TqdmSynchronisationWarning: Set changed size during iteration (see https://github.com/tqdm/tqdm/issues/481)\n",
+      "  TqdmSynchronisationWarning)\n",
+      "1777it [00:14, 121.90it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Images shape: (1777, 299, 299, 3) size: 476,596,731\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "INPUT_SIZE = 299\n",
     "POOLING = 'avg'\n",
@@ -289,17 +326,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 576/1409 [===========>..................] - ETA: 13:53"
+     ]
+    }
+   ],
    "source": [
     "Xtr = x_train[train_idx]\n",
     "Xv = x_train[valid_idx]\n",
-    "print((Xtr.shape, Xv.shape, ytr.shape, yv.shape))\n",
+    "\n",
     "xception_bottleneck = xception.Xception(weights='imagenet', include_top=False, pooling=POOLING)\n",
+    "\n",
+    "# some kind of bug in the latest keras.  Recommended to have this line of code\n",
+    "xception_bottleneck.compile('sgd','mse')\n",
+    "\n",
     "train_x_bf = xception_bottleneck.predict(Xtr, batch_size=32, verbose=1)\n",
     "valid_x_bf = xception_bottleneck.predict(Xv, batch_size=32, verbose=1)\n",
+    "\n",
     "print('Xception train bottleneck features shape: {} size: {:,}'.format(train_x_bf.shape, train_x_bf.size))\n",
     "print('Xception valid bottleneck features shape: {} size: {:,}'.format(valid_x_bf.shape, valid_x_bf.size))"
    ]
@@ -321,8 +369,10 @@
    "source": [
     "logreg = LogisticRegression(multi_class='multinomial', solver='lbfgs', random_state=SEED)\n",
     "logreg.fit(train_x_bf, (ytr * range(NUM_CLASSES)).sum(axis=1))\n",
+    "\n",
     "valid_probs = logreg.predict_proba(valid_x_bf)\n",
     "valid_preds = logreg.predict(valid_x_bf)\n",
+    "\n",
     "print('Validation Xception LogLoss {}'.format(log_loss(yv, valid_probs)))\n",
     "print('Validation Xception Accuracy {}'.format(accuracy_score((yv * range(NUM_CLASSES)).sum(axis=1), valid_preds)))"
    ]
@@ -344,12 +394,19 @@
    "source": [
     "Xtr = x_train[train_idx]\n",
     "Xv = x_train[valid_idx]\n",
+    "\n",
     "print((Xtr.shape, Xv.shape, ytr.shape, yv.shape))\n",
+    "\n",
     "inception_bottleneck = inception_v3.InceptionV3(weights='imagenet', include_top=False, pooling=POOLING)\n",
+    "\n",
+    "# some kind of bug in the latest keras.  Recommended to have this line of code\n",
+    "inception_bottleneck.compile('sgd','mse')\n",
+    "\n",
     "train_i_bf = inception_bottleneck.predict(Xtr, batch_size=32, verbose=1)\n",
     "valid_i_bf = inception_bottleneck.predict(Xv, batch_size=32, verbose=1)\n",
+    "\n",
     "print('InceptionV3 train bottleneck features shape: {} size: {:,}'.format(train_i_bf.shape, train_i_bf.size))\n",
-    "print('InceptionV3 valid bottleneck features shape: {} size: {:,}'.format(valid_i_bf.shape, valid_i_bf.size))\n"
+    "print('InceptionV3 valid bottleneck features shape: {} size: {:,}'.format(valid_i_bf.shape, valid_i_bf.size))"
    ]
   },
   {
@@ -379,8 +436,10 @@
    "source": [
     "logreg = LogisticRegression(multi_class='multinomial', solver='lbfgs', random_state=SEED)\n",
     "logreg.fit(train_i_bf, (ytr * range(NUM_CLASSES)).sum(axis=1))\n",
+    "\n",
     "valid_probs = logreg.predict_proba(valid_i_bf)\n",
     "valid_preds = logreg.predict(valid_i_bf)\n",
+    "\n",
     "print('Validation Inception LogLoss {}'.format(log_loss(yv, valid_probs)))\n",
     "print('Validation Inception Accuracy {}'.format(accuracy_score((yv * range(NUM_CLASSES)).sum(axis=1), valid_preds)))"
    ]
@@ -402,12 +461,16 @@
    "source": [
     "X = np.hstack([train_x_bf, train_i_bf])\n",
     "V = np.hstack([valid_x_bf, valid_i_bf])\n",
+    "\n",
     "print('Full train bottleneck features shape: {} size: {:,}'.format(X.shape, X.size))\n",
     "print('Full valid bottleneck features shape: {} size: {:,}'.format(V.shape, V.size))\n",
+    "\n",
     "logreg = LogisticRegression(multi_class='multinomial', solver='lbfgs', random_state=SEED)\n",
     "logreg.fit(X, (ytr * range(NUM_CLASSES)).sum(axis=1))\n",
+    "\n",
     "valid_probs = logreg.predict_proba(V)\n",
     "valid_preds = logreg.predict(V)\n",
+    "\n",
     "print('Validation Xception + Inception LogLoss {}'.format(log_loss(yv, valid_probs)))\n",
     "print('Validation Xception + Inception Accuracy {}'.format(accuracy_score((yv * range(NUM_CLASSES)).sum(axis=1), valid_preds)))"
    ]
@@ -430,6 +493,7 @@
    "source": [
     "valid_breeds = (yv * range(NUM_CLASSES)).sum(axis=1)\n",
     "error_idx = (valid_breeds != valid_preds)\n",
+    "\n",
     "for img_id, breed, pred in zip(labels.loc[valid_idx, 'id'].values[error_idx],\n",
     "                                [selected_breed_list[int(b)] for b in valid_preds[error_idx]],\n",
     "                                [selected_breed_list[int(b)] for b in valid_breeds[error_idx]]):\n",
