updated readmes moved google landmark to future

--- a/complete/mnist/submission.ipynb
+++ b/complete/mnist/submission.ipynb
@@ -253,7 +253,7 @@
    },
    "outputs": [],
    "source": [
-    "submission.to_csv(\"/Users/pbezuhov/git/Kaggle/submissions/mnist.csv\", index=False)"
+    "submission.to_csv(\"../../submissions/mnist.csv\", index=False)"
    ]
   },
   {
