--- a/complete/titanic/submission.ipynb
+++ b/complete/titanic/submission.ipynb
@@ -357,30 +357,11 @@
     "full.loc[(full['Age'] > 36) & (full['Age'] <= 62), 'Age'] = 3,\n",
     "full.loc[ full['Age'] > 62, 'Age'] = 4\n",
     "\n",
-    "# ### Fare\n",
-    "# full.loc[ full['Fare'] <= 17, 'Fare'] = 0,\n",
-    "# full.loc[(full['Fare'] > 17) & (full['Fare'] <= 30), 'Fare'] = 1,\n",
-    "# full.loc[(full['Fare'] > 30) & (full['Fare'] <= 100), 'Fare'] = 2,\n",
-    "# full.loc[ full['Fare'] > 100, 'Fare'] = 3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Reduce Skew"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Apply log to Fare to reduce skewness distribution\n",
-    "full[\"Fare\"] = full[\"Fare\"].map(lambda i: np.log(i) if i > 0 else 0)"
+    "### Fare\n",
+    "full.loc[ full['Fare'] <= 17, 'Fare'] = 0,\n",
+    "full.loc[(full['Fare'] > 17) & (full['Fare'] <= 30), 'Fare'] = 1,\n",
+    "full.loc[(full['Fare'] > 30) & (full['Fare'] <= 100), 'Fare'] = 2,\n",
+    "full.loc[ full['Fare'] > 100, 'Fare'] = 3"
    ]
   },
   {
