--- a/in_progress/doge/beluga_code.ipynb
+++ b/in_progress/doge/beluga_code.ipynb
@@ -332,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 576/1409 [===========>..................] - ETA: 13:53"
+      "1280/1409 [==========================>...] - ETA: 2:10"
      ]
     }
    ],
